# Overseer

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  deploy.config.example.json  deploy.ps1  pyproject.toml  scene_structure.csv  todo.md
.claude/: rules.md
.claude/skills/deploy/: SKILL.md  deploy.config.example.json  deploy.ps1  deploy_blender.ps1
.claude/skills/readme/: SKILL.md
.claude/skills/release/: SKILL.md  build_blender_zip.py  test-release.ps1  vendor_pillow.py
.claude/skills/scene-architect/: SKILL.md
.claude/skills/scene-conventions/: SKILL.md
.claude/skills/scene-rules/: SKILL.md
.github/workflows/: ci.yml  mirror.yml  release.yml
art/: icon.psd
blender_addon/: __init__.py  blender_manifest.toml
docs/: FEATURES.md  M1-layers-overhaul.md  README.md  ROADMAP.md  api.md  overseer.md  scene_organizer.md
docs/ai/: blender.md  cinema.md  core.md  hostapi.md  naming.md  newhost.md  overseer.md  rules.md  src.md  structure.md
docs/claude/: cinema.md  overseer.md  src.md
docs/overseer/: bridge.md  config.md  updater.md  vendor.md
docs/overseer/cinema/: adapter.md  audit_files.md  audit_perf.md  audit_tags.md  constants.md  files.md  perf.md  tags.md  webapi.md
docs/overseer/core/: analyzer.md  defaults.md  materials_logic.md  ops.md  perf_logic.md  pipeline.md  tags_logic.md  textures.md
docs/sceneorg/: bridge.md  plugin_entry.md
frontend/: STYLEGUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: assets.spec.ts  files.spec.ts  fixtures.mjs  generators.spec.ts  layers.spec.ts  materials.spec.ts  misc.spec.ts  mock.ts  naming.spec.ts  overview.spec.ts  shell.spec.ts  sims.spec.ts  tags.spec.ts  translate.spec.ts
frontend/src/: App.jsx  App.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  RuleGraph.jsx  api.js  api.ts  main.jsx  main.tsx  styles.css  types.ts
reports/: current.json
scripts/: build_logo_c4d.py
scripts/release/: build_blender_zip.py  vendor_pillow.py
src/: CLAUDE.md  config.crane-game.json  config.example.json  config.json  overseer.pyp  scene_organizer.pyp
src/blender_addon/: __init__.py
src/overseer/: CLAUDE.md  bridge.py  config.py  updater.py  vendor.py
src/presets/: archviz-interior.json  kitbash-mograph.json  minimal.json  product-studio.json  so-arbeitest-du.json
src/sceneorg/: CLAUDE.md  __init__.py  analyzer.py  bridge.py  c4d_adapter.py  config.py  convention.py  detect.py  dialog.py  graph.py  model.py  naming.py  ops.py  pipeline.py  plugin_entry.py  rules.py  structure.py  translate.py  translations.py  vendor.py  webapi.py
tests/: conftest.py  test_analyzer.py  test_audit_config_graph.py  test_audit_core_naming_unicode.py  test_audit_core_textures_png.py  test_audit_rules_engine.py  test_config.py  test_convention.py  test_detect.py  test_edge_cases.py  test_files_logic.py  test_gens_logic.py  test_graph.py  test_imagesize.py  test_import_graph.py  test_journal.py  test_keeps.py  test_layers.py  test_materials_logic.py  test_model.py  test_naming.py  test_operations.py  test_ops.py  test_perf_logic.py  test_perf_overlap.py  test_pipeline.py  test_rules.py  test_sims_logic.py  test_structure.py  test_structure_nested.py  test_tags_logic.py  test_texthumbs.py  test_textures.py  test_translate.py  test_translate_words.py  test_translations_cache.py  test_ui_settings.py  test_updater.py  test_vendor.py
tests/blender/: fakebpy.py  test_blender_compiles.py  test_blender_registration.py  test_ports.py  test_scene_tree.py  test_webapi_contract.py  test_webio.py
tests/cinema/: test_cinema_compiles.py  test_cinema_registration.py
tests/core/: test_config.py  test_edge_cases.py  test_vendor.py
tools/: vendor_pillow.py
(+369 files in other folders)
