[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overseer"
version = "1.0.0"
description = "Cinema 4D plugin: scene analysis, naming normalization, and structure optimization"
requires-python = ">=3.9"

[tool.pytest.ini_options]
# The pure domain package lives under src/ and is tested without c4d.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
# Lowest supported runtime: Cinema 4D 2023 ships Python 3.9, so pyupgrade
# must never suggest 3.10+ syntax.
target-version = "py39"
src = ["src"]
# The C4D plugin loader is Python but carries C4D's .pyp extension; the Blender
# addon loader lives outside src/ (it is bundled next to the package at deploy/
# zip time), so name it explicitly so `ruff check` lints it like overseer.pyp.
extend-include = ["*.pyp", "blender_addon/__init__.py"]
# extend-include makes ruff descend into gitignored trees, which would drag the
# vendored Pillow copy into our lint gate. It is third-party source — not ours to fix.
extend-exclude = ["src/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length is uncritical. UP031: %-formatting is fine in the c4d context.
# UP042: StrEnum only exists from 3.11 on, but 3.9 stays supported.
ignore = ["E501", "UP031", "UP042"]
